--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,26 @@
   display: inline;
   cursor: pointer;
 }
+
+.search-container {
+  display: flex;
+  align-items: center;
+  border: 2px solid #ccc;
+  border-radius: 25px;
+  overflow: hidden;
+  width: 300px;
+  margin: 2rem auto;
+}
+
+.search-input {
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  flex: 1;
+  outline: none;
+}
+
+.beSearchHeart{
+  margin-right: 2%;
+  color: #DCA47C;
+}
