--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+input[type="text"]{
+  border: 2px solid #ccc;
+  border-radius: 25px;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  flex: 1;
+  outline: none;
+}
+
 .App {
   text-align: center;
   box-sizing: border-box;
